Fix bug with required input validation for forms not correctly working
Also set max and min length for title inputs inside form to prevent too long titles affect style layout

--- a/src/assets/styles/styles.css
+++ b/src/assets/styles/styles.css
@@ -139,8 +139,8 @@ textarea {
   cursor: pointer;
   border: 0;
   border-radius: 4px;
-  background-color: #544e61;
-  color: whitesmoke;
+  background-color: #42438A;
+  color: #FFFFFF;
 }
 
 .p-create-btn:active {
